--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Wheelbarrow -->
     <div id="wheelbarrow"></div>
     <div id="wheelbarrow-foreground"></div>
-
+<!-- this is a comment  -->
 
     <!-- Kitties -->
 
